wp-content/themes/ideum/stylesheets/components/_social-media-feed.scss
.social-media-feed {
  @include media($medium-screen-up) {
    padding-bottom: $gutter * 2;
  }

  .social-media-feed-slider {
    box-sizing: content-box;

    .item {
      float: none;
    }

  }

  .item {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    border: 1px solid $white;
    height: 375px;
    width: 100%;

    @include media($medium-screen-up) { 
      width: (100% / 2); 

    }
    @include media($large-screen-up)  { 
      width: (100% / 3); 
      &:nth-of-type(1) {
        border-left: 0px;
      }
      &:nth-of-type(3) {
        border-right: 0px;
      }
    }

    overflow: hidden;
    position: relative;
    float: left;

    a.view {
      display: block; 
      height: 100%;
      position: relative;
      width: 100%;
      z-index: 400;
    }

    * { color: $vv-light-gray; }

    img {
      /*height: auto;
      min-height: 100%;
      min-width: 100%;
      width: auto;*/
      float:right;
      position: absolute;
        right: 10%; top: 6%;

      &.img-circular {
        width: 100px;
        height: 100px;
        -webkit-border-radius: 100px;
        -moz-border-radius: 100px;
        -ms-border-radius: 100px;
        -o-border-radius: 100px;
        border-radius: 100px;
      }
    }

    .content {
      opacity: .99;
      text-align: center;
      z-index: 100;

      .footer {
        @include media($small-screen-up) { 
          position: absolute;
            left: 1%; bottom: 20px;
        }
        @include media($medium-screen-up) { 
          position: inherit;
            left: inherit; bottom: inherit;
        }
      }
    }

    .icon-youtube, .icon-twitter, .icon-flickr, .icon-facebook, .icon-linkedin {
      color: $white;
      font-size: 32px;
      position: absolute;
      left: 10%; top: 6%;
    }

    &.youtube {
      background-color: #3A3834;
    }

    &.facebook {
      background-color: #43609C;
    }

    &.twitter {
      background-color: $medium-blue;
    }

    &.twitter {

      .content {
        margin:0 auto;
        max-height: 85%;
        overflow: hidden;
        @include media($small-screen-up) { 
          padding: ($large-gutter * 2.25) 0;
        }
        @include media($medium-screen-up) { 
          padding: ($large-gutter * 1.75) 0;
        }
        @include position(absolute, 0 0 0 0);
        width:80%;

        p {
          color: $white;
          font-size: 1.4em;
          line-height:1.7em;
          text-align: left;
          word-wrap: break-word;
        }

      }

    }

    &.youtube, &.facebook {

      .content {
        margin:0 auto;
        padding: ($large-gutter * 2) 0;
        position: absolute;
          bottom: 0; left: 0; right: 0; 
        width:80%;

        p {
          color: $white;
          font-size: 1em;
          text-align: left;
          word-wrap: break-word;
        }

      }

    }

    &.flickr {

      .content {
        margin:0 auto;
        padding: ($large-gutter * 2) 0;
        position: absolute;
          bottom: 0; left: 0; right: 0; 
        width:80%;

        p {
          color: $white;
          font-size: 1.4em;
          text-align: left;
          word-wrap: break-word;
        }

      }

    }

    &.linkedin {
      background-color: $medium-blue;

      .content {
        width:80%;
        margin:0 auto;
        padding: ($large-gutter * 2) 0;

        p {
          color: $white;
          font-size: 1.4em;
          text-align: left;
          word-wrap: break-word;
        }

      }

    }

    &.flickr {
      /* no op */
    }

    .footer {
      padding: $gutter 0 0 0;
      z-index: 500;

      @include media($small-screen-up) { 
        padding: $gutter 10% 0;
        position: absolute;
          bottom: 20px;
      }
      @include media($medium-screen-up) { 
        position: inherit;
          left: inherit; bottom: inherit;
      }
      

      @include media($medium-screen-up) {
        height: 4em;
        /*padding:0 0 $large-gutter + $gutter;*/
        padding: 10px 10% $large-gutter;
        position: absolute;
        bottom: 0;
      }

      .read, .share {
        float: left;
        margin-right:1em;
      }

      a.read, a.share {
        color: $white;
        font-weight: 700;
        text-transform: uppercase;

        &:hover {
          color: darken($white, 15);
        }

      }

    }

  }

}

